# MAX31820

./: CMakeLists.txt  DS2485.c  DS2485.h  README.md  Temp_Sensor.c  Temp_Sensor.h
